added comments, updated attempt 1

--- a/watson_attempt1.ipynb
+++ b/watson_attempt1.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "from env import env\n",
-    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query # importing from shared takes a few seconds"
+    "from shared import get_wiki_df, get_questions_df, LemmatizeFilter, filter_query, transform_category"
    ]
   },
   {
@@ -62,14 +62,17 @@
    "source": [
     "class Watson:\n",
     "    def __init__(self):\n",
-    "        self.Q = len(questions_df.index)\n",
+    "        self.questions_df = get_questions_df()\n",
+    "        self.Q = len(self.questions_df.index)\n",
     "        self._analyzer = self._build_analyzer()\n",
     "        self._index = self._build_index()\n",
     "        self._parser = self._build_parser()\n",
     "\n",
+    "    # builds the analyzer\n",
     "    def _build_analyzer(self):\n",
     "        return RegexTokenizer() | LowercaseFilter() | LemmatizeFilter()\n",
-    "    \n",
+    "\n",
+    "    # builds the index\n",
     "    def _build_index(self):\n",
     "        if exists_in(env.index_path):\n",
     "            ix = open_dir(env.index_path)\n",
@@ -83,26 +86,31 @@
     "                    content=TEXT(analyzer=self._analyzer))\n",
     "            ix = create_in(env.index_path, schema)\n",
     "            with ix.writer() as writer:\n",
-    "                for _, row in wiki_df.iterrows():\n",
+    "                for _, row in get_wiki_df().iterrows():\n",
     "                    writer.add_document(title=row.title, content=row.text)\n",
     "        return ix\n",
-    "    \n",
+    "\n",
+    "    # builds the parser\n",
     "    def _build_parser(self):\n",
     "        og = OrGroup.factory(0.9)\n",
     "        return QueryParser(\"content\", schema=self._index.schema, group=og)\n",
-    "    \n",
+    "\n",
+    "    # searches the index for the category and question provided\n",
     "    def search(self, category, question, scorer=BM25F):\n",
-    "        query = self._parser.parse(f\"{category}^0.5 \" + filter_query(question))\n",
+    "        category = transform_category(category)\n",
+    "        question = filter_query(question)\n",
+    "        query = self._parser.parse(category + \" \" + question)\n",
     "        with self._index.searcher(weighting=scorer()) as searcher:\n",
     "            results = searcher.search(query, limit=None)\n",
     "            if results.scored_length() == 0:\n",
     "                return None\n",
     "            return [(r[\"title\"], r.rank+1) for r in results]\n",
     "\n",
+    "    # tests the system using MRR or precison at 1\n",
     "    def test(self, scorer=BM25F, eval=\"mrr\"):\n",
     "        if eval == \"mrr\":\n",
     "            mrr = 0.0\n",
-    "            for _, row in questions_df.iterrows():\n",
+    "            for _, row in self.questions_df.iterrows():\n",
     "                results = self.search(row.category, row.question, scorer)\n",
     "                rank = Watson.get_rank(results, row.answer)\n",
     "                if rank > 0:\n",
@@ -111,14 +119,15 @@
     "            return mrr\n",
     "        elif eval == \"p@1\":\n",
     "            correct = 0\n",
-    "            for _, row in questions_df.iterrows():\n",
+    "            for _, row in self.questions_df.iterrows():\n",
     "                results = self.search(row.category, row.question, scorer)\n",
     "                if Watson.is_correct(results, row.answer):\n",
     "                    correct += 1\n",
     "            return correct / self.Q\n",
     "        else:\n",
     "            raise Exception(f\"unrecognized evaluation type: {eval}\")\n",
-    "        \n",
+    "\n",
+    "    # gets the rank of an answer\n",
     "    @staticmethod\n",
     "    def get_rank(results, answer):\n",
     "        for answer_variant in answer.split(\"|\"):\n",
@@ -126,7 +135,8 @@
     "                if doc_title.lower() == answer_variant.lower():\n",
     "                    return rank\n",
     "        return 0\n",
-    "    \n",
+    "\n",
+    "    # determines if an answer is correct\n",
     "    @staticmethod\n",
     "    def is_correct(results, answer):\n",
     "        guess, _ = results[0]\n",
@@ -134,7 +144,8 @@
     "            if answer_variant.lower() == guess.lower():\n",
     "                return True\n",
     "        return False\n",
-    "    \n",
+    "\n",
+    "    # gets the guess from an element in the results list\n",
     "    @staticmethod\n",
     "    def get_guess(results):\n",
     "        guess, _ = results[0]\n",
@@ -152,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "95661e01",
    "metadata": {},
    "outputs": [],
