--- a/watson_attempt2.ipynb
+++ b/watson_attempt2.ipynb
@@ -42,7 +42,15 @@
    "outputs": [],
    "source": [
     "from env import env\n",
-    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query # importing from shared takes a few seconds"
+    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query, transform_category # importing from shared takes a few seconds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7460269-459a-4e4b-aeac-39f7b7f35749",
+   "metadata": {},
+   "source": [
+    "### Get the OpenAI API key and define the ChatGPT query"
    ]
   },
   {
@@ -67,11 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "47cfaf01",
+   "execution_count": null,
+   "id": "2f54e91d-88e0-42f1-b362-b76d37161476",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# query ChatGPT using the OpenAI API\n",
     "def query_ChatGPT(query):\n",
     "    import requests\n",
     "\n",
@@ -103,29 +112,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4abda390-2b5e-4a58-84e5-05945ce0eb13",
+   "metadata": {},
+   "source": [
+    "### Define the query transform\n",
+    "NOTE: There were more transformations in here at one point, but they did not increase score and were removed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "327c32e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def query_pipeline(query):\n",
+    "# transform the query, just filters it for now\n",
+    "def transform_query(query):\n",
     "    query = filter_query(query)\n",
     "    return query"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c83fcd67",
+   "cell_type": "markdown",
+   "id": "19e3f579-2a8e-408c-bd83-1d8124df02a7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def category_pipeine(category):\n",
-    "    new_cat = \"\"\n",
-    "    for c in category.split():\n",
-    "        new_cat += c + \"^0.5 \"\n",
-    "    return new_cat.strip()"
+    "### Define the reranking function\n",
+    "Asks ChatGPT to rerank the top k results. k is a hyperparameter that was tuned to nbe 15 for the best results."
    ]
   },
   {
@@ -135,6 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rerank top k results with ChatGPT\n",
     "with open(\"ChatGPT_template/t4.txt\", \"r\") as file:\n",
     "    template4 = file.read()\n",
     "def rerank_results(question, results):\n",
@@ -171,14 +186,17 @@
    "source": [
     "class Watson:\n",
     "    def __init__(self):\n",
-    "        self.Q = len(questions_df.index)\n",
+    "        self.questions_df = get_questions_df()\n",
+    "        self.Q = len(self.questions_df.index)\n",
     "        self._analyzer = self._build_analyzer()\n",
     "        self._index = self._build_index()\n",
     "        self._parser = self._build_parser()\n",
     "\n",
+    "    # builds the analyzer\n",
     "    def _build_analyzer(self):\n",
     "        return RegexTokenizer() | LowercaseFilter() | LemmatizeFilter()\n",
-    "    \n",
+    "\n",
+    "    # builds the index\n",
     "    def _build_index(self):\n",
     "        if exists_in(env.index_path):\n",
     "            ix = open_dir(env.index_path)\n",
@@ -192,18 +210,21 @@
     "                    content=TEXT(analyzer=self._analyzer))\n",
     "            ix = create_in(env.index_path, schema)\n",
     "            with ix.writer() as writer:\n",
-    "                for _, row in wiki_df.iterrows():\n",
+    "                for _, row in get_wiki_df().iterrows():\n",
     "                    writer.add_document(title=row.title, content=row.text)\n",
     "        return ix\n",
-    "    \n",
+    "\n",
+    "    # builds the parser\n",
     "    def _build_parser(self):\n",
     "        og = OrGroup.factory(0.9)\n",
     "        return QueryParser(\"content\", schema=self._index.schema, group=og)\n",
+    "\n",
+    "    # searches the index for the category and question provided\n",
     "    \n",
     "    def search(self, category, question, scorer=BM25F):\n",
     "        try:\n",
-    "            category = category_pipeine(category)\n",
-    "            question = query_pipeline(question)\n",
+    "            category = transform_category(category)\n",
+    "            question = transform_query(question)\n",
     "            query = self._parser.parse(category + \" \" + question)\n",
     "        except TypeError as e:\n",
     "            print(query_pipeline(question))\n",
@@ -213,11 +234,12 @@
     "            if results.scored_length() == 0:\n",
     "                return None\n",
     "            return rerank_results(question, [(r[\"title\"], r.rank+1) for r in results])\n",
-    "\n",
+    "            \n",
+    "    # tests the system using MRR or precison at 1\n",
     "    def test(self, scorer=BM25F, eval=\"mrr\"):\n",
     "        if eval == \"mrr\":\n",
     "            mrr = 0.0\n",
-    "            for _, row in questions_df.iterrows():\n",
+    "            for _, row in self.questions_df.iterrows():\n",
     "                results = self.search(row.category, row.question, scorer)\n",
     "                rank = Watson.get_rank(results, row.answer)\n",
     "                if rank > 0:\n",
@@ -226,7 +248,7 @@
     "            return mrr\n",
     "        elif eval == \"p@1\":\n",
     "            correct = 0\n",
-    "            for _, row in questions_df.iterrows():\n",
+    "            for _, row in self.questions_df.iterrows():\n",
     "                results = self.search(row.category, row.question, scorer)\n",
     "                if Watson.is_correct(results, row.answer):\n",
     "                    correct += 1\n",
@@ -234,7 +256,7 @@
     "        elif eval == \"both\":\n",
     "            mrr = 0.0\n",
     "            correct = 0\n",
-    "            for _, row in questions_df.iterrows():\n",
+    "            for _, row in self.questions_df.iterrows():\n",
     "                results = self.search(row.category, row.question, scorer)\n",
     "                rank = Watson.get_rank(results, row.answer)\n",
     "                if rank > 0:\n",
@@ -245,6 +267,7 @@
     "        else:\n",
     "            raise Exception(f\"unrecognized evaluation type: {eval}\")\n",
     "        \n",
+    "    # gets the rank of an answer\n",
     "    @staticmethod\n",
     "    def get_rank(results, answer):\n",
     "        for answer_variant in answer.split(\"|\"):\n",
@@ -252,7 +275,8 @@
     "                if doc_title.lower() == answer_variant.lower():\n",
     "                    return rank\n",
     "        return 0\n",
-    "    \n",
+    "\n",
+    "    # determines if an answer is correct\n",
     "    @staticmethod\n",
     "    def is_correct(results, answer):\n",
     "        guess, _ = results[0]\n",
@@ -260,7 +284,8 @@
     "            if answer_variant.lower() == guess.lower():\n",
     "                return True\n",
     "        return False\n",
-    "    \n",
+    "\n",
+    "    # gets the guess from an element in the results list\n",
     "    @staticmethod\n",
     "    def get_guess(results):\n",
     "        guess, _ = results[0]\n",
