--- a/watson_attempt1.ipynb
+++ b/watson_attempt1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "15a2236b",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2c00be79",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b85b91b7",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "95661e01",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
    "source": [
     "correct = []\n",
     "incorrect = []\n",
-    "for _, row in questions_df.iterrows():\n",
+    "for _, row in get_questions_df().iterrows():\n",
     "    results = watson.search(row.category, row.question)\n",
     "    guess = Watson.get_guess(results)\n",
     "    if Watson.is_correct(results, row.answer):\n",
