--- a/watson_attempt2.ipynb
+++ b/watson_attempt2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "15a2236b",
    "metadata": {},
    "outputs": [],
@@ -31,18 +31,18 @@
     "from whoosh.index import create_in, open_dir, exists_in\n",
     "from whoosh.qparser import QueryParser, OrGroup\n",
     "from whoosh.scoring import BM25F\n",
-    "from whoosh.analysis import RegexTokenizer, LowercaseFilter, NgramFilter"
+    "from whoosh.analysis import RegexTokenizer, LowercaseFilter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d3491de6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from env import env\n",
-    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query, transform_category # importing from shared takes a few seconds"
+    "from shared import get_wiki_df, get_questions_df,LemmatizeFilter, filter_query, transform_category # importing from shared takes a few seconds"
    ]
   },
   {
@@ -55,18 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "04b23a31",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your OpenAI API Key:  sk-proj-SNT756928pYEEjotrbLZT3BlbkFJmLkgwk46Sn4dUQ7Q6Eeq\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "if not api_key:\n",
@@ -122,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "327c32e5",
    "metadata": {},
    "outputs": [],
@@ -144,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a11c55f9",
    "metadata": {},
    "outputs": [],
@@ -179,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b85b91b7",
    "metadata": {},
    "outputs": [],
@@ -222,13 +214,9 @@
     "    # searches the index for the category and question provided\n",
     "    \n",
     "    def search(self, category, question, scorer=BM25F):\n",
-    "        try:\n",
-    "            category = transform_category(category)\n",
-    "            question = transform_query(question)\n",
-    "            query = self._parser.parse(category + \" \" + question)\n",
-    "        except TypeError as e:\n",
-    "            print(query_pipeline(question))\n",
-    "            raise e\n",
+    "        category = transform_category(category)\n",
+    "        question = transform_query(question)\n",
+    "        query = self._parser.parse(category + \" \" + question)\n",
     "        with self._index.searcher(weighting=scorer()) as searcher:\n",
     "            results = searcher.search(query, limit=None)\n",
     "            if results.scored_length() == 0:\n",
@@ -303,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "95661e01",
    "metadata": {},
    "outputs": [],
@@ -321,21 +309,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8cce1bd4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.5816188877674071, 0.54)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mrr_score, pa1_score = watson.test(eval=\"both\")\n",
     "mrr_score, pa1_score"
@@ -358,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
